--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-loader-spinner": "^4.0.0",
     "react-console-log": "^1.1.13",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
